--- a/styles/03-components/navigation.css
+++ b/styles/03-components/navigation.css
@@ -35,7 +35,7 @@
     border-radius: 0.1em;
     outline: none;
     padding: 0.3em 0.5em;
-
+    outline: none;
     flex-direction: column;
     justify-content: space-between;
     width: 2.5em;
@@ -43,6 +43,9 @@
     border-radius: 0.1em;
     z-index: 1001;
     background-color: var(--color-main-background);
+    position: relative;
+    z-index: 10;
+    transform: translateZ(0);
 
 }
 
